--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <div id="central">
             <h2><a href="Site">Facebook</a></h2>
-            <h2><a href="Site">Instagram</a></h2>
+            <h2><a href="https://www.instagram.com/luanpablosg/">Instagram</a></h2>
             <h2><a href="Site">Youtube</a></h2>
             <p>Volta para o <a href="site">Menu</a></p>
         </div>
