Adicionei os links

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
 
         <div id="central">
-            <h2><a href="Site">Facebook</a></h2>
-            <h2><a href="Site">Instagram</a></h2>
-            <h2><a href="Site">Youtube</a></h2>
-            <p>Volta para o <a href="site">Menu</a></p>
+            <h2><a href="https://www.facebook.com/luan.pablo.5891">Facebook</a></h2>
+            <h2><a href="https://www.instagram.com/luanpablosg/p/CQ2K9hYJCU9/?utm_medium=copy_link">Instagram</a></h2>
+            <h2><a href="https://youtube.com/channel/UCEzlJgyXqefVmiaKHV5vA1g">Youtube</a></h2>
+            <p>Volta para o <a href="https://luapablosda.github.io/trabalho/">Menu</a></p>
         </div>
     </body>
 </html> 
