--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <style>
         #central{
+            width: 60%;
+            height: 100%;
             text-aling: center;        
         }
     </style>
