--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         #central{
             width: 60%;
             height: 100%;
+            margin: 0 auto 0 auto;
             text-aling: center;        
         }
     </style>
