--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             height: 100%;
             border: solid ;
             margin: 0 auto 0 auto;
-            text-aling: center;        
+            text-align: center;      
         }
     </style>
     <body>
