--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
 
         <div id="central">
-            <h2><a href="https://www.facebook.com/luan.pablo.5891">Facebook</a></h2>
-            <h2><a href="https://www.instagram.com/luanpablosg/p/CQ2K9hYJCU9/?utm_medium=copy_link">Instagram</a></h2>
-            <h2><a href="https://youtube.com/channel/UCEzlJgyXqefVmiaKHV5vA1g">Youtube</a></h2>
+            <p><a href="https://www.facebook.com/luan.pablo.5891">Facebook</a></p>
+            <p><a href="https://www.instagram.com/luanpablosg/p/CQ2K9hYJCU9/?utm_medium=copy_link">Instagram</a></p>
+            <p><a href="https://youtube.com/channel/UCEzlJgyXqefVmiaKHV5vA1g">Youtube</a></p>
             <p>Volta para o <a href="https://luapablosda.github.io/trabalho/">Menu</a></p>
         </div>
     </body>
