--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         #central{
             width: 60%;
             height: 100%;
-            border: solid ;
+            border: none ;
             margin: 0 auto 0 auto;
             text-align: center;      
         }
