--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <style>
         #central{
-            width: 60%;
-            height: 100%;
+            width: 25%%;
+            height: 50%%;
             border: none ;
             margin: 0 auto 0 auto;
             text-align: center;      
