--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         #central{
             width: 25px;
             height: 50px;
-            border: none ;
+            
             margin: 0 auto 0 auto;
             text-align: center;      
         }
@@ -11,6 +11,7 @@
     <body>
 
         <div id="central">
+            <h1> Redes Sociais </h1>
             <p><a href="https://www.facebook.com/luan.pablo.5891">Facebook</a></p>
             <p><a href="https://www.instagram.com/luanpablosg/p/CQ2K9hYJCU9/?utm_medium=copy_link">Instagram</a></p>
             <p><a href="https://youtube.com/channel/UCEzlJgyXqefVmiaKHV5vA1g">Youtube</a></p>
