--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         #central{
             width: 25px;
             height: 50px;
-            
+            border-style: none;
             margin: 0 auto 0 auto;
             text-align: center;      
         }
