--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <style>
         #central{
-            width: 25px;
-            height: 50px;
+            width: 25%;
+            height: 50%;
             border-style: none;
             margin: 0 auto 0 auto;
             text-align: center;      
